--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
+    "@types/express": "^4.17.17",
     "express": "^4.18.2",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "typescript": "^5.1.3"
   },
   "scripts": {
     "start": "node server.js"
   }
-  
 }
